# intro_python

./: .gitignore  consulta_site_lago copy.py  consulta_site_lago.py  pyproject.toml
docs/: intro.md
