[tool.poetry]
name = "intro-python"
version = "0.1.0"
description = ""
authors = ["DNV <dan.nascim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.45.0"
ignr = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
